--- a/BeaconScanner/app/build.gradle
+++ b/BeaconScanner/app/build.gradle
@@ -29,6 +29,8 @@ dependencies {
 
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.2.0-alpha01'
+
+    implementation 'net.steamcrafted:materialiconlib:1.1.5'
 
 }
