--- a/BeaconScanner/app/build.gradle
+++ b/BeaconScanner/app/build.gradle
@@ -37,4 +37,7 @@ dependencies {
 
     implementation 'net.steamcrafted:materialiconlib:1.1.5'
 
+    implementation 'com.leinardi.android:speed-dial:3.1.0'
+
+
 }
