--- a/BeaconScanner/app/build.gradle
+++ b/BeaconScanner/app/build.gradle
@@ -39,5 +39,6 @@ dependencies {
 
     implementation 'com.leinardi.android:speed-dial:3.1.0'
 
+    implementation 'com.github.rahatarmanahmed:circularprogressview:2.5.0'
 
 }
