--- a/BeaconScanner/app/build.gradle
+++ b/BeaconScanner/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
 
     implementation 'com.github.rahatarmanahmed:circularprogressview:2.5.0'
 
+    implementation 'com.github.AppIntro:AppIntro:5.1.0'
 }
