--- a/BeaconScanner/app/src/main/AndroidManifest.xml
+++ b/BeaconScanner/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme.Launcher" >
         <activity
             android:name=".NavigationDrawerActivity"
             android:label="@string/title_activity_navigation_drawer"
@@ -29,7 +29,7 @@
 
         <activity android:name="com.example.beaconscanner.IntroActivity"
             android:label="@string/app_intro"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" android:noHistory="true"/>
      <!--   <activity
             android:name=".NavigationDrawerActivity"
             android:hardwareAccelerated="false"
@@ -39,8 +39,8 @@
         <activity android:name=".RegistrarUsuarioActivity" android:theme="@style/LoginTheme"
             android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".LoginActivity" android:theme="@style/LoginTheme"
-            android:screenOrientation="portrait">
+        <activity android:name=".LoginActivity"
+            android:screenOrientation="portrait" android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
