--- a/BeaconScanner/app/src/main/AndroidManifest.xml
+++ b/BeaconScanner/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
             android:screenOrientation="portrait" android:noHistory="false">
         </activity>
         <activity android:name=".LoginActivity"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" android:noHistory="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
