--- a/BeaconScanner/app/build.gradle
+++ b/BeaconScanner/app/build.gradle
@@ -42,4 +42,6 @@ dependencies {
     implementation 'com.github.rahatarmanahmed:circularprogressview:2.5.0'
 
     implementation 'com.github.AppIntro:AppIntro:5.1.0'
+
+    implementation group: 'at.favre.lib', name: 'bcrypt', version: '0.9.0'
 }
