--- a/BeaconScanner/app/src/main/AndroidManifest.xml
+++ b/BeaconScanner/app/src/main/AndroidManifest.xml
@@ -36,10 +36,10 @@
             android:theme="@style/LoginTheme">
         </activity>-->
         <activity android:name=".RegistrarUsuarioActivity" android:theme="@style/LoginTheme"
-            android:screenOrientation="portrait" android:noHistory="false">
+            android:screenOrientation="portrait" >
         </activity>
         <activity android:name=".LoginActivity"
-            android:screenOrientation="portrait" android:noHistory="true" >
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
