--- a/BeaconScanner/app/build.gradle
+++ b/BeaconScanner/app/build.gradle
@@ -45,4 +45,9 @@ dependencies {
     implementation 'com.github.AppIntro:AppIntro:5.1.0'
 
     implementation group: 'at.favre.lib', name: 'bcrypt', version: '0.9.0'
+
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha'
+
+    implementation 'com.diogobernardino:williamchart:3.1.1'
+
 }
