--- a/BeaconScanner/app/src/main/AndroidManifest.xml
+++ b/BeaconScanner/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.beaconscanner">
+    package="com.equipo3.poluzone">
 
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
