--- a/BeaconScanner/app/build.gradle
+++ b/BeaconScanner/app/build.gradle
@@ -52,5 +52,6 @@ dependencies {
 
     implementation 'com.github.blikoon:QRCodeScanner:0.1.2'
     implementation 'com.google.maps.android:android-maps-utils:0.5'
+    implementation 'com.android.support:cardview-v7:28.0.0'
 
 }
