--- a/BeaconScanner/app/src/main/AndroidManifest.xml
+++ b/BeaconScanner/app/src/main/AndroidManifest.xml
@@ -46,15 +46,15 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name="com.equipo3.poluzone.poluzone.MapsActivity"
+            android:name="com.equipo3.poluzone.MapsActivity"
             android:label="@string/title_activity_maps"></activity>
         <activity
-            android:name="com.equipo3.poluzone.poluzone.NavigationDrawerActivity"
+            android:name="com.equipo3.poluzone.NavigationDrawerActivity"
             android:label="@string/title_activity_navigation_drawer"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
-            android:name="com.equipo3.poluzone.poluzone.IntroActivity"
+            android:name="com.equipo3.poluzone.IntroActivity"
             android:label="@string/app_intro"
             android:noHistory="true"
             android:screenOrientation="portrait" />
@@ -66,11 +66,11 @@
         </activity>
         -->
         <activity
-            android:name="com.equipo3.poluzone.poluzone.RegistrarUsuarioActivity"
+            android:name="com.equipo3.poluzone.RegistrarUsuarioActivity"
             android:screenOrientation="portrait"
             android:theme="@style/LoginTheme"></activity>
         <activity
-            android:name="com.equipo3.poluzone.poluzone.LoginActivity"
+            android:name="com.equipo3.poluzone.LoginActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
