--- a/BeaconScanner/app/build.gradle
+++ b/BeaconScanner/app/build.gradle
@@ -20,7 +20,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -35,16 +35,23 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.google.android.material:material:1.2.0-alpha01'
+
     implementation 'net.steamcrafted:materialiconlib:1.1.5'
+
     implementation 'com.leinardi.android:speed-dial:3.1.0'
+
     implementation 'com.github.rahatarmanahmed:circularprogressview:2.5.0'
+
     implementation 'com.github.AppIntro:AppIntro:5.1.0'
-    implementation 'at.favre.lib:bcrypt:0.9.0'
+
+    implementation group: 'at.favre.lib', name: 'bcrypt', version: '0.9.0'
+
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha'
+
     implementation 'com.diogobernardino:williamchart:3.1.1'
+
     implementation 'com.github.blikoon:QRCodeScanner:0.1.2'
     implementation 'com.google.maps.android:android-maps-utils:0.5'
     implementation 'com.android.support:cardview-v7:28.0.0'
-    implementation files('libs/httpclient-4.5.10.jar')
-    implementation files('libs/httpcore-4.4.12.jar')
+
 }
