--- a/BeaconScanner/app/src/main/AndroidManifest.xml
+++ b/BeaconScanner/app/src/main/AndroidManifest.xml
@@ -78,7 +78,8 @@
             android:theme="@style/LoginTheme"></activity>
         <activity
             android:name="com.equipo3.poluzone.LoginActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/LoginTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
